--- a/index.html
+++ b/index.html
@@ -52,22 +52,105 @@ font-weight: bold;
 .error {
 color: #ff6b6b;
 }
+
+/* Lock screen styles */
+#lock-screen {
+position: fixed;
+inset: 0;
+background: #0d1117;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+z-index: 9999;
+color: #c9d1d9;
+}
+#lock-screen.hidden {
+display: none;
+}
+#pass-input {
+background: #161b22;
+border: 1px solid #30363d;
+color: #c9d1d9;
+font-size: 24px;
+padding: 12px 16px;
+width: 180px;
+text-align: center;
+letter-spacing: 8px;
+font-family: monospace;
+}
+#pass-input::placeholder {
+color: #444c56;
+letter-spacing: normal;
+}
+#pass-error {
+color: #ff6b6b;
+margin-top: 12px;
+min-height: 1.2em;
+}
 </style>
 </head>
 <body>
+
+<!-- Lock screen overlay -->
+<div id="lock-screen">
+<h2 style="margin-bottom: 20px;">Enter Passcode</h2>
+<input type="text" id="pass-input" maxlength="4" placeholder="••••" autocomplete="off" autofocus />
+<div id="pass-error"></div>
+</div>
+
+<div id="main-content" style="display: none;">
 <div id="output"></div>
 <div id="input-line">
 <span id="prompt">> </span>
-<input type="text" id="command" autocomplete="off" spellcheck="false" autofocus />
+<input type="text" id="command" autocomplete="off" spellcheck="false" />
+</div>
 </div>
 
 <script>
 const output = document.getElementById('output');
 const commandInput = document.getElementById('command');
+const lockScreen = document.getElementById('lock-screen');
+const mainContent = document.getElementById('main-content');
+const passInput = document.getElementById('pass-input');
+const passError = document.getElementById('pass-error');
+
+const CORRECT_PASSCODE = '4233';
 
 let currentMenu = 'main';
 let panicKey = null;
 let panicKeyListener = null;
+
+// Simple masked input handling (show bullets)
+passInput.addEventListener('input', () => {
+passError.textContent = '';
+// We don't need to manually mask value — type="text" + letter-spacing + placeholder does visual masking
+// Real value is still accessible for checking
+});
+
+passInput.addEventListener('keydown', (e) => {
+if (e.key === 'Enter') {
+e.preventDefault();
+const entered = passInput.value.trim();
+if (entered === CORRECT_PASSCODE) {
+lockScreen.classList.add('hidden');
+mainContent.style.display = 'block';
+commandInput.focus();
+drawMainMenu(); // Show initial menu after unlock
+} else {
+passError.textContent = 'Incorrect passcode.';
+passInput.value = '';
+passInput.focus();
+}
+}
+});
+
+// Start with lock screen visible
+lockScreen.classList.remove('hidden');
+mainContent.style.display = 'none';
+passInput.focus();
+
+// ────────────────────────────────────────────────
 
 function print(text = '', className = '') {
 const line = document.createElement('div');
@@ -190,28 +273,9 @@ drawPanicMenu();
 document.addEventListener('keydown', tempListener);
 }
 
-function openInBlankTab(url) {
-const win = window.open('about:blank', '_blank');
-if (win) {
-win.document.open();
-win.document.write(`
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loading...</title>
-<style>body { margin:0; padding:0; overflow:hidden; background:#000; }</style>
-</head>
-<body>
-<iframe src="${url}" frameborder="0" style="width:100vw; height:100vh; border:none;"></iframe>
-</body>
-</html>
-`);
-win.document.close();
-} else {
-print('Popup blocked — allow popups to open in blank tab.', 'error');
-}
+// Replaced openInBlankTab with direct navigation (replaces current tab)
+function navigateTo(url) {
+window.location.replace(url);
 }
 
 function cloakTab() {
@@ -227,13 +291,7 @@ print('Popup blocked — allow popups for Cloak Tab.', 'error');
 }
 
 function newBlankWindow() {
-// Open as large as possible → most browsers treat this as maximized
-const width = screen.availWidth;
-const height = screen.availHeight;
-window.open('', '_blank',
-`width=${width},height=${height},left=0,top=0,` +
-`menubar=no,toolbar=no,location=no,status=no,resizable=yes,scrollbars=yes,fullscreen=yes`
-);
+window.open('', '_blank', 'width=1200,height=800,menubar=no,toolbar=no,location=no,status=no,resizable=yes');
 }
 
 function processCommand(input) {
@@ -252,16 +310,16 @@ print(`? ${cmd}`, 'error');
 }
 
 else if (currentMenu === 'games') {
-if (cmd === '1') openInBlankTab('https://plinko-game-online.github.io/');
-else if (cmd === '2') openInBlankTab('https://0706970-collab.github.io/googleclassroom/');
-else if (cmd === '3') openInBlankTab('https://0706970-collab.github.io/gta/');
+if (cmd === '1') navigateTo('https://plinko-game-online.github.io/');
+else if (cmd === '2') navigateTo('https://0706970-collab.github.io/googleclassroom/');
+else if (cmd === '3') navigateTo('https://0706970-collab.github.io/gta/');
 else if (cmd === '4' || cmd === 'back') { currentMenu = 'main'; drawMainMenu(); }
 else if (cmd) print(`? ${cmd}`, 'error');
 }
 
 else if (currentMenu === 'ai') {
-if (cmd === '1') openInBlankTab('https://0706970-collab.github.io/Jesko-ai/');
-else if (cmd === '2') openInBlankTab('https://grok.com/');
+if (cmd === '1') navigateTo('https://0706970-collab.github.io/Jesko-ai/');
+else if (cmd === '2') navigateTo('https://grok.com/');
 else if (cmd === '3' || cmd === 'back') { currentMenu = 'main'; drawMainMenu(); }
 else if (cmd) print(`? ${cmd}`, 'error');
 }
@@ -303,7 +361,6 @@ print(`? ${cmd}`, 'error');
 }
 }
 
-// ────────────────────────────────────────────────
 commandInput.addEventListener('keydown', function(e) {
 if (e.key === 'Enter') {
 e.preventDefault();
@@ -318,11 +375,21 @@ function refocus() {
 commandInput.focus();
 }
 
-commandInput.focus();
-document.addEventListener('click', refocus);
-window.addEventListener('blur', () => setTimeout(refocus, 100));
-// Initial screen
-drawMainMenu();
+document.addEventListener('click', () => {
+if (!lockScreen.classList.contains('hidden')) {
+passInput.focus();
+} else {
+refocus();
+}
+});
+
+window.addEventListener('blur', () => {
+if (!lockScreen.classList.contains('hidden')) {
+setTimeout(() => passInput.focus(), 100);
+} else {
+setTimeout(refocus, 100);
+}
+});
 </script>
 </body>
 </html>
