--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@ else if (currentMenu === 'games') {
 if (cmd === '1') openInBlankTab('https://plinko-game-online.github.io/');
 else if (cmd === '2') openInBlankTab('https://0706970-collab.github.io/googleclassroom/');
 else if (cmd === '3') openInBlankTab('https://0706970-collab.github.io/gta/');
-else if (cmd === '4' || cmd === 'back') { currentMenu = 'main'; drawMainMenu(); }
+else if (cmd === '4') openInBlankTab('https://0706970-collab.github.io/Street-Fighter-II/');
+else if (cmd === '5' || cmd === 'back') { currentMenu = 'main'; drawMainMenu(); }
 else if (cmd) print(`? ${cmd}`, 'error');
 }
 else if (currentMenu === 'ai') {
