--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@ drawHeader('GAMES');
 print(' [01] > Rainbet');
 print(' [02] > Unblocked Hub');
 print(' [03] > GTA: Vice City');
+print(' [04] > Street Fighter II');
 print('');
-print(' [04] > Back');
+print(' [05] > Back');
 print('');
 }
 
