--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ else if (cmd) print(`? ${cmd}`, 'error');
 }
 else if (currentMenu === 'ai') {
 if (cmd === '1') openInBlankTab('https://0706970-collab.github.io/Jesko-ai/');
-else if (cmd === '2') openInBlankTab('search.brave.com/ask');
+else if (cmd === '2') openInBlankTab('https://search.brave.com/ask');
 else if (cmd === '3' || cmd === 'back') { currentMenu = 'main'; drawMainMenu(); }
 else if (cmd) print(`? ${cmd}`, 'error');
 }
